# gens

./: .dockerignore  .eslintrc.yml  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  gulpfile.js  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tsconfig.json  webpack.config.cjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker_push.yml  preproc_docker_push.yml  preproc_stage_docker_push.yml  tests.yml
assets/__mocks__/: fileMock.js
assets/css/: about.scss  error.scss  gens.scss  home.scss  landing.scss  navbar.scss
assets/js/: cache.ts  constants.ts  draw.js  draw.ts  fetch.js  fetch.test.js  fetch.ts  gens.js  gens.test.js  gens.test.ts  gens.ts  gens_db.ts  helper.js  helper.ts  interactive.js  interactive.ts  navigation.js  navigation.test.js  navigation.test.ts  navigation.test.ts.skip  navigation.ts  overview.js  overview.ts  requests.ts  shortcuts.ts  tmp.ts  track.js  track.ts  types.ts
assets/js/components/: canvas_track.ts  gens_settings.ts  genstracks.ts  header_info.ts  hello.ts  input_controls.ts  multiannots.ts  multiannotstrack.ts  settings.ts  settings_page.ts  side_menu.ts  simple_track.ts  top_bar.ts  tracks_manager.ts  tracksmanager.ts
assets/js/draw/: graph.js  graph.ts  ideogram.ts  render_utils.ts  shapes.js  shapes.ts
assets/js/home/: gens_home.ts  sample_table.ts
assets/js/movements/: dragging.ts  marker.ts
assets/js/state/: api.ts  data_source.ts  gens_api.ts  gens_db.ts  gens_session.ts  parse_api.ts  parse_data.ts  requests.ts  session.ts
assets/js/track/: annotation.js  annotation.ts  base.js  base.test.js  base.ts  utils.js  (+13 more)
doc/: developer_guide.md  installation.md  user_guide.md
docs/: README.md  admin_guide.md  configure_gens.md  generate_gens_data.md  installation.md  installation_old.md  load_gens_data.md  new_pr_steps.md  panel_of_normals.md  patch_checklist.md  setup_gens.md  update_checklist.md  user_guide.md  work_pr_template.md
docs/admin_guide/: configure_gens.md  generate_gens_data.md  installation.md  load_gens_data.md  overview.md  panel_of_normals.md
docs/user_guide/: chromosome_view.md  meta_data.md  multi_chromosomes_view.md  samples_page.md  settings.md  single_chromosome_view.md  track_actions.md  tracks_view.md  user_summary.md
frontend/__mocks__/: styleMock.js
frontend/css/: about.scss  defaults.scss  gens.scss  home.scss  landing.scss  navbar.scss
frontend/js/: constants.ts  gens.ts  shortcuts.ts  types.ts
gens/: __init__.py  __version__.py  api.py  app.py  auth.py  cache.py  config.py  config.toml  constants.py  errors.py  exceptions.py  genomic.py  graph.py  io.py  profiler.py  utils.py  wsgi.py
gens/adapters/: base.py  null.py  scout.py
gens/blueprints/: __init__.py
gens/cli/: __init__.py  base.py  delete.py  index.py  load.py  update.py  users.py  view.py
gens/commands/: __init__.py  base.py  delete.py  index.py  load.py  setup.py  util.py  view.py
gens/crud/: annotations.py  collections.py  genomic.py  sample_annotations.py  samples.py  scout.py  search.py  transcripts.py  user.py  utils.py
gens/db/: __init__.py  annotation.py  chrom_sizes.py  collections.py  db.py  index.py  markus_db.py  models.py  samples.py  users.py
gens/example_profiles/: Gens_Singel-default-settings.json  Gens_Trio-default-settings.json
gens/extensions/: __init__.py
gens/load/: __init__.py  annotations.py  chromosomes.py  meta.py  tmptest.py  transcripts.py
gens/models/: __init__.py  annotation.py  base.py  genomic.py  sample.py  sample_annotation.py  search.py
gens/openapi/: openapi.yaml
gens/profiles/: Gens_Singel-default-settings.json  Gens_Trio-default-settings.json
gens/routes/: __init__.py  annotations.py  base.py  gene_lists.py  root.py  sample.py  sample_annotations.py  search.py  transcripts.py  utils.py
gens/templates/: layout.html  sample_error.html
tests/: _test_cli.py  conftest.py  fixtures.py  test_cli.py  test_config_auth_user_db.py  test_docs_auth.py  test_index.py  test_load_annotations.py  test_sample.py
tests/__pycache__/: test_graph.py
tests/blueprints/: test_home_views.py  test_login_views.py
tests/cli/: test_annotations.py  test_chromosomes.py  test_index.py  test_sample.py  test_sample_annotation.py  test_transcripts.py  test_users.py
tests/crud/: test_user.py
tests/data/: meta.tsv  meta_norow.tsv  standard.9.bed
tests/fixtures/: __init__.py  chas.aed  standard.9.bed  stockholm.bed
tests/parsing/: test_parse_aed.py  test_parse_meta.py
tests/patches/: flask.py  gens_app.py  other.py  pydantic.py  pymongo.py  server.py  toremove.py
tests/util_scripts/: _test_gvcfvaf.py  test_generate_gens_data.py
tests/utils/: mongomock.py  my_mongomock.py  stub.py
utils/: Dockerfile  README.md  generate_gens_data.pl  generate_gens_data.py  generate_roh_and_upd_tracks.py  load_hg002_from_dump.sh  normalize_coverage_without_pon.py  quick_setup.py
utils/new/: generate_gens_data.py  gvcfvaf.py
(+161 files in other folders)
